# IEP

tema4/: CMakeLists.txt  Figura.cpp  comenziCMake.txt
tema5/: CMakeCache.txt  Makefile  cmake_install.cmake  rectangle
tema5/src/: CMakeLists.txt  a.out  iep5.cpp
tema6/: CMakeCache.txt  Makefile  cmake_install.cmake  rectangle
tema6/src/: CMakeLists.txt  a.out  iep6.cpp
